create user model and user signup post/route, generate jwt token, update api docs
